--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@ $(document).ready(function(){
 <div id="addEmployeeModal" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action = "/new" method= "POST">
+			<form action = "{{ url_for('new_user') }}" method= "POST">
 				<div class="modal-header">						
 					<h4 class="modal-title">Add Employee</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -118,19 +118,19 @@ $(document).ready(function(){
 										
 					<div class="form-group">
 						<label>Name</label>
-						<input type="text" name= "inputname" class="form-control" required/>
+						<input type="text" name= "name" class="form-control" required/>
 					</div>
 					<div class="form-group">
 						<label>Email</label>
-						<input type="email" name = "inputemail" class="form-control" required/>
+						<input type="email" name = "email" class="form-control" required/>
 					</div>
 					<div class="form-group">
 						<label>Address</label>
-						<input type="text" name = "inputAddress" class="form-control" required/>
+						<input type="text" name = "address" class="form-control" required/>
 					</div>
 					<div class="form-group">
 						<label>Phone</label>
-						<input type="text" name = "inputphone" class="form-control" required/>
+						<input type="text" name = "phone" class="form-control" required/>
 					</div>					
 				</div>
 				<div class="modal-footer">
