--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <div id="editEmployeeModal{{row._id}}" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action="/update" method="POST">
+			<form action="{{ url_for('update_user', pk=row._id) }}" method="POST">
 				<div class="modal-header">						
 					<h4 class="modal-title">Edit Employee</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -33,19 +33,19 @@
 					<div class="form-group">
                         <label>Name</label>
                         <input type = "hidden" name = "id" value ="{{row._id}}">
-						<input type="text" name="editname" class="form-control" value= {{row.name}} required/>
+						<input type="text" name="name" class="form-control" value= {{row.name}} required/>
 					</div>
 					<div class="form-group">
 						<label>Email</label>
-						<input type="email" name="editemail" class="form-control" value = {{row.email}} required/>
+						<input type="email" name="email" class="form-control" value = {{row.email}} required/>
 					</div>
 					<div class="form-group">
 						<label>Address</label>
-						<input type="text" name="editaddress" class="form-control" value = {{row.address}} required/>
+						<input type="text" name="address" class="form-control" value = {{row.address}} required/>
 					</div>
 					<div class="form-group">
 						<label>Phone</label>
-						<input type="text" name="editphone" class="form-control" value= {{row.phone}} required/>
+						<input type="text" name="phone" class="form-control" value= {{row.phone}} required/>
                     </div>					
 				</div>
 				<div class="modal-footer">
@@ -60,7 +60,7 @@
 <div id="deleteEmployeeModal{{row._id}}" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action = "/delete" method = "POST">
+			<form action ="{{ url_for('delete_user', pk=row._id) }}" >
 				<div class="modal-header">						
 					<h4 class="modal-title">Delete Employee</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -70,7 +70,7 @@
 					<p class="text-warning"><small>This action cannot be undone.</small></p>
 				</div>
 				<div class="modal-footer">
-                    <input type = "hidden" name = "id" value ="{{row._id}}">
+                    <input type="hidden" name = "id" value ="{{row._id}}">
 					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
 					<input type="submit" class="btn btn-danger" value="Delete">
 				</div>
