--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,10 @@
     <td>{{row.address}}</td>
     <td>{{row.phone}}</td>
     <td>
+		<a href="#MoreEmployeeModal{{row._id}}" class="update" data-toggle="modal"><i class="far fa-eye" data-toggle="tooltip" title="More info">&#xE872;</i></a>
         <a href="#editEmployeeModal{{row._id}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
         <a href="#deleteEmployeeModal{{row._id}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+
     </td>
 </tr>
 <!-- Edit Modal HTML -->
@@ -79,7 +81,42 @@
 	</div>
 </div>
 
-
+<!-- More Info Modal HTML -->
+<div id="MoreEmployeeModal{{row._id}}" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<form action="{{ url_for('home')}}" method="GET">
+				<div class="modal-header">						
+					<h4 class="modal-title">More Info</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				</div>
+				<div class="modal-body">					
+					<div class="form-group">
+                        <label>Name</label>
+                        <input type = "hidden" name = "id" value ="{{row._id}}">
+						<input type="text" name="name" class="form-control" value= {{row.name}} readonly required/>
+					</div>
+					<div class="form-group">
+						<label>Email</label>
+						<input type="email" name="email" class="form-control" value = {{row.email}} readonly required/>
+					</div>
+					<div class="form-group">
+						<label>Address</label>
+						<input type="text" name="address" class="form-control" value = {{row.address}} readonly required/>
+					</div>
+					<div class="form-group">
+						<label>Phone</label>
+						<input type="text" name="phone" class="form-control" value= {{row.phone}} readonly required/>
+                    </div>					
+				</div>
+				<div class="modal-footer">
+					<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+					<input type="submit" class="btn btn-info" value="Done">
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
 {% endfor %}
 
 {% endblock %}
